IMCMS-362 - imCMS: tha panel is not fixated: - Changed panel to be sticky fixed on page in visible mode.

--- a/src/main/webapp/css/admin/imcms-admin_panel.css
+++ b/src/main/webapp/css/admin/imcms-admin_panel.css
@@ -357,7 +357,7 @@
 /* panel "visible" */
 
 .imcms-panel-visible {
-    position: relative;
+    position: sticky;
 }
 
 .imcms-panel-visible .imcms-admin-panel {
